# desispec

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  AGENTS.md  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: python-package.yml
data/: quicklook_example_config.yaml
data/arc_lines/: KrI_vacuum.ascii  lines_for_specex.py  rejected_lines.yaml  rejected_lines_vacuum.yaml
doc/: Makefile  api.rst  changes.rst  coadd.rst  conf.py  cte-correction.rst  dev.rst  hello.rst  index.rst  install.rst  intro.rst  overview.rst  pipeline.rst  piperun.rst  qa.rst  rtd-requirements.txt  temp.rst
doc/_static/: desi_pipe_cleanup.inc  desi_pipe_create.inc  desi_pipe_create_ex.inc  desi_pipe_go.inc  desi_pipe_go_ex.inc  desi_pipe_help.inc  desi_pipe_status_all.inc  desi_pipe_status_help.inc  desi_pipe_top_ex.inc  desi_pipe_update.inc
doc/nb/: .gitignore  BootCalib_CRs.ipynb  Boot_Calibs.ipynb  Boot_Calibs_firsttry.ipynb  Boot_Calibs_fulltest.ipynb  Bootcalib_r.ipynb  Bootcalib_rz.ipynb  Bootcalib_z.ipynb  Bootstrap_tests.ipynb  Cosmics.ipynb  DatabaseConsistencyChecks.ipynb  FibermapCombinationTest.ipynb  Holy_grail.ipynb  Intro_to_DESI_spectra.ipynb  JoinCosmics.ipynb  Lya-sn.ipynb  Lya-tsnr-signal.ipynb  Overscan.ipynb  Preproc.ipynb  PreprocConstructionTest.ipynb  QA_Brick.ipynb  QA_Exposure.ipynb  QA_Frame.ipynb  QA_Prod.ipynb  QA_S2N_Develop.ipynb  SpectroPerfectCoadds.ipynb  TemplateSNR.ipynb  TestEverestDatabase.ipynb  TopLevelConsistencyChecks.ipynb  calspec-loa.ipynb  cosmic-joiner.ipynb  tsnr_ensemble.ipynb  tsnr_refset_etc.py
doc/tex/: .gitignore  Makefile  coadd.bib  coadd.tex  qa.tex
doc/tex/fig/: .gitignore
etc/: anaconda_integration_test.sh  cron_dailytest.sh  desiInstall_integration_test.sh  desi_bundle.py  desi_bundle.spec  desi_dts_delivery_test.sh  desi_nersc_pipetest.py  desispec.module  file_db.sql  get_ccd_history.py  travis_env_common.sh  travis_env_linux.sh  travis_env_osx.sh  travis_install_specex.sh  zcatalog_commands.sh
etc/mpi4py_multiproc/: README  desi_test_multiprocess  gen_slrm.sh  template
etc/redshiftqa/: desi_per_fiber_qa_html.py  desi_per_fiber_qa_plots.py  desi_per_fiber_qa_stats.py
py/desispec/: ProcAlgs.py  WD_scripts.py  __init__.py  _version.py  averagefluxcalibration.py  badcolumn.py  bootcalib.py  boxcar.py  brick.py  calibfinder.py  ccdcalib.py  coaddition.py  correct_cte.py  cosmics.py  darkfinder.py  darktrail.py  desi_bias_dark_1d_model.py  desi_create_bias_dark.py  desi_dashboard.py  desi_proc_dashboard.py  desi_proc_time_distribution.py  dustextinction.py  efftime.py  emlinefit.py  exposure_qa.py  fiberbitmasking.py  fibercrosstalk.py  fiberflat.py  fiberflat_vs_humidity.py  fiberfluxcorr.py  fluxcalibration.py  focus.py  frame.py  gpu.py  heliocentric.py  image.py  image_model.py  interpolation.py  inventory.py  joincosmics.py  (+41 more)
py/desispec/data/: batch_config.yaml  emlines.par  fiber-crosstalk.yaml
py/desispec/database/: __init__.py  datachallenge.py  duplicates.py  metadata.py  redshift.py  spectra.py  util.py
py/desispec/hartmann/: DESI_tools.py  Hartmann_plot.py  PSFstuff.py  README.rst  calculate_hartmann_shift.py  centroid.py  create_line_ref.py  filesTools.py  fit_arc.py  fit_arc_list.py  fit_exposures.py  fit_exposures_preproc.py  fit_hartmann_preproc.py  focus_DESI_2.py  goodlines_vaccum.all  goodlines_vaccum.ascii  hartmann_correction.py  hartmann_shift.py  lines_for_hartmann.ascii  preproc_dir.py  read_log_csv.py  read_plot.py
py/desispec/io/: __init__.py  brick.py  crc.py  ctecorr.py  database.py  download.py  emlinefit.py  exposure_tile_qa.py  meta.py  (+26 more)
(+441 files in other folders)
