[metadata]
name = desispec
version = attr: desispec.__version__
author = DESI Collaboration
author_email = desi-data@desi.lbl.gov
license = BSD-3-Clause
license_files = LICENSE.rst
url = https://github.com/desihub/desispec
description = DESI Spectroscopic Tools
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = True
github_project = desihub/desispec
# classifiers =
#     Development Status :: 5 - Production/Stable
#     Environment :: Console
#     Intended Audience :: Science/Research
#     Operating System :: OS Independent
#     Programming Language :: Python :: 3
#     Topic :: Scientific/Engineering :: Astronomy
#     Topic :: System :: Software Distribution
#     Topic :: Utilities

[options]
zip_safe = True
package_dir =
    =py
# find_namespace avoids a warning about data directories when building packages.
packages = find_namespace:
include_package_data = True
python_requires = >=3.10
# setup_requires = setuptools_scm
install_requires =
    pytz
    requests
    astropy
    scipy
    fitsio
    numba
    healpy
    speclite
    sqlalchemy
    desiutil
#     git+https://github.com/desihub/specter.git@main#egg=specter
#     git+https://github.com/desihub/gpu_specter.git@main#egg=gpu_specter
#     git+https://github.com/desihub/desimodel.git@main#egg=desimodel
#     # Don't forget to install desimodel test data.
#     git+https://github.com/desihub/desitarget.git@main#egg=desitarget
#     git+https://github.com/desihub/redrock.git@main#egg=redrock
# scripts =
#     bin/copyprod

# [options.entry_points]
# console_scripts =
#     desi_add_scores = desispec.scripts.specscore:specscore

[options.extras_require]
all =
test =
    pytest
coverage =
    pytest-cov
    coveralls
doc =
    Sphinx
    sphinx-rtd-theme

[options.package_data]
desispec =
    data/arc_lines/*
    data/db/*
    data/gfa/*
    data/params/*
    data/qa/*
    data/quicklook/*
    data/tsnr/*
    data/*.yaml
    data/*.dat
desispec.test =
    data/exposure_tables/*/*
    data/miniprod/*/*/*/*
    data/miniprod/*/*/*
    data/miniprod/*/*
    data/miniprod/*
    data/processing_tables/*
    data/ql/*

[options.packages.find]
where = py
exclude = .github/*

[tool:pytest]
testpaths = py

[coverage:run]
relative_files = True
source =
    py/desispec
omit =
    py/desispec/_version.py
    py/desispec/conftest*
    py/desispec/test/*
    */desispec/_version.py
    */desispec/conftest*
    */desispec/test/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[pycodestyle]
# See https://pycodestyle.readthedocs.io/en/latest/intro.html#configuration
# for details of these configuration options.
#
# These are normally ignored by default:
# ignore = E121, E123, E126, E133, E226, E241, E242, E704, W503, W504
#
# In addition to the default set we add:
# - E501: line too long (82 > 79 characters)
# - E731: do not assign a lambda expression, use a def
# - E741: do not use variables named 'l', 'O', or 'I' -- because, for example,
#   'l' might refer to Galactic longitude.
ignore = E121, E123, E126, E133, E226, E241, E242, E501, E704, E731, E741, W503, W504
